1998-10-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.rules ($(DATA)): 

1998-10-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.rules (_$(NAME).tex $(addprefix $(NAME),.fot .rtf), 
	$(NAME).html, $(NAME).dvi): Don't depend on figs.
	($(DATA)): Depend on $(FIGS), which is figs/swarm.eps (for the 
	timestamp).

	* Makefile.am (html dvi rtf fot ps htmldist dvidist rtfdist
	psdist): Don't depend on all. 

	* configure.in: Add tex/Makefile to AC_OUTPUT.  Don't use
	AC_PATH_PROG for jadetex or dvips since they can't deal with Cygwin
	paths.  Check using alternate cache varibles.

	* Makefile.rules ($(NAME).dvi): Use tex/macros.tex.

	* Makefile.am (EXTRA_DIST): Remove macros.tex.
	(SUBDIRS): Add tex.

	* macros.tex: Moved to tex/.

1998-10-07  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* configure.in: Add m4/Makefile to AC_OUTPUT.
	Use AC_PATH_PROG instead of AC_CHECK_PROG throughout, and
	ac_cv_path_* instead of ac_cv_prog_*.  Substitute SGML_CATALOG_FILES.

	* Makefile.rules: Pass subsitituted SGML_CATALOG_FILES to runs of jade.

	* acprogs.m4: Moved to m4/.

1998-10-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* common.dsl: Revert 1998-09-15 change; it's needed in order
	to get revision histories for each module.

	* macros.tex: Disable insertParagraphBreak, PageColumnSep, lt, gt,
	Entity, endDisplayNIC, and insertExternalGraphic, since they
	appear to be fixed with jadetex 2.2.

	* docbook.dcl (TAGLEN, ATTSPLEN): Increase to 1886.

1998-09-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* NEWS: Add notes for 1.3 and 1.3.1.

	* print.dsl (reference-titlepage-recto-mode): Wrap title element
	with a display-group with a break-before: 'page.  This is to get
	modules starting on odd pages (along with change below).

	* macros.tex: Redefine \Break@page to call cleardouble page
	(an abuse).

	* common.dsl: Remove reference-titlepage-{recto,verso}-elements.

	* Makefile.am (EXTRADIST): Add macros.tex.
